--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,14 +3,26 @@ name: Upload Website
 on:
   push:
     branches:
-    - master
+      - main
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20' # Or whichever version you need
+
+      - name: Install dependencies and build
+        run: |
+          cd nexus-net
+          npm install
+          npm run build
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
@@ -23,7 +35,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-central-1'
-          SOURCE_DIR: './nexus-net/'
+
 
 
 
