--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ name: Upload Website
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   deploy:
@@ -13,19 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
-          source_dir: nexus-net/build/
-          dest_dir: s3://nexusnet-frontend
+      - name: Sync local build folder to S3
+        run: |
+          cd nexus-net
+          aws s3 sync build/ s3://nexusnet-frontend --acl public-read --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-central-1'
-          SOURCE_DIR: './nexus-net/build/'
-
+          AWS_DEFAULT_REGION: 'eu-central-1'
 
 #code for build and deploy - you do not have to npm run build
 # name: Upload Website
