--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Sync local build folder to S3
         run: |
           cd nexus-net
-          aws s3 sync build/ s3://nexusnet-frontend --acl public-read --delete
+          aws s3 sync build/ s3://front-end/nexusnet-frontend --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
