--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,26 +1,26 @@
 #make sure that you are running npm run build
-name: Upload Website
+# name: Upload Website
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
 
-      - name: Sync local build folder to S3
-        run: |
-          cd nexus-net
-          aws s3 sync build/ s3://front-end/nexusnet-frontend --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'eu-central-1'
+#       - name: Sync local build folder to S3
+#         run: |
+#           cd nexus-net
+#           aws s3 sync build/ s3://front-end/nexusnet-frontend --delete
+#         env:
+#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           AWS_DEFAULT_REGION: 'eu-central-1'
 
 #code for build and deploy - you do not have to npm run build
 # name: Upload Website
