--- a/nexus-net/package.json
+++ b/nexus-net/package.json
@@ -17,7 +17,9 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "react-router-dom": "^6.22.3"
   },
   "scripts": {
     "start": "react-scripts start",
