--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "amazon-cognito-identity-js": "^6.3.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "styled-components": "^6.1.8",
-    "amazon-cognito-identity-js": "^6.3.12",
-    "react-router-dom": "^6.22.3"
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
