--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
