--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
     "@types/uuid": "^9.0.8",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-force-graph": "^1.44.3"
   },
   "scripts": {
     "start": "react-scripts start",
