--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "uuid": "^9.0.1",
     "@types/uuid": "^9.0.8",
     "redux-persist": "^6.0.0",
-    "react-force-graph": "^1.44.3"
+    "react-force-graph": "^1.44.3",
+    "react-force-graph-2d": "^1.25.4"
   },
   "scripts": {
     "start": "react-scripts start",
