--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
-    "react": "^18.2.0",
+    "react": "18.3.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
