--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_USER_BASEURL=http://localhost:8080/
 REACT_APP_POST_BASEURL=http://localhost:8081/
+REACT_APP_CHAT_BASEURL=http://localhost:8082/
